fixed page contents not showing and cleaned up font importing

--- a/assets/sass/_font-import.scss
+++ b/assets/sass/_font-import.scss
@@ -34,39 +34,3 @@
 
 }
 
-@font-face {
-    font-family: 'TitilliumText22LMedium';
-    src: url('titilliumtext/TitilliumText22L004-webfont.eot');
-    src: url('titilliumtext/TitilliumText22L004-webfont.eot?#iefix') format('embedded-opentype'),
-         url('titilliumtext/TitilliumText22L004-webfont.woff') format('woff'),
-         url('titilliumtext/TitilliumText22L004-webfont.ttf') format('truetype'),
-         url('titilliumtext/TitilliumText22L004-webfont.svg#TitilliumText22LMedium') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'TitilliumText22LBold';
-    src: url('titilliumtext/TitilliumText22L005-webfont.eot');
-    src: url('titilliumtext/TitilliumText22L005-webfont.eot?#iefix') format('embedded-opentype'),
-         url('titilliumtext/TitilliumText22L005-webfont.woff') format('woff'),
-         url('titilliumtext/TitilliumText22L005-webfont.ttf') format('truetype'),
-         url('titilliumtext/TitilliumText22L005-webfont.svg#TitilliumText22LBold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'TitilliumText22LXBold';
-    src: url('titilliumtext/TitilliumText22L006-webfont.eot');
-    src: url('titilliumtext/TitilliumText22L006-webfont.eot?#iefix') format('embedded-opentype'),
-         url('titilliumtext/TitilliumText22L006-webfont.woff') format('woff'),
-         url('titilliumtext/TitilliumText22L006-webfont.ttf') format('truetype'),
-         url('titilliumtext/TitilliumText22L006-webfont.svg#TitilliumText22LXBold') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
