--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -597,7 +597,7 @@ body {
   text-rendering: optimizeLegibility; }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: "TitilliumText22LMedium"; }
+  font-family: "TitilliumText22LRegular"; }
 
 strong {
   font-weight: bold; }
